welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:1: error: ';' expected but 'else' found.
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = { if (isWeekend) {if (cigars>=40) {true} else {false} else {if (cigars>=40 && cigars <=60) {true} else {false}}}} 
                                                                                                              ^