welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = { if (isWeekend) {if (cigars>=40) {true} else {false} else {if (cigars>=40 && cigars <=60) {true} else {false}}}}